@@ -1,3 +1,12 @@
+2008-02-04  Daniel Morales  <daniminas@gmail.com>
+
+	* data/preferences_dialog.glade:
+	* data/twitux.schemas.in:
+	* src/twitux-parser.c:
+	* src/twitux-preferences.c:
+	* src/twitux.h: Add preference to show user names ore
+	real names
+
 2008-01-19  Daniel Morales  <daniminas@gmail.com>
 
 	* src/twitux-network.c: add 'source' param to get 'from twitux'
